samples/_failures_safe/1761452270_e4626f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e95af931.c: In function ‘main’:
./samples/SAFE/__tmp_e95af931.c:133:13: error: expected ‘,’ or ‘;’ at end of input
  133 |             for (size_t j = 0
      |             ^~~
./samples/SAFE/__tmp_e95af931.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e95af931.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e95af931.c:133:13: error: expected declaration or statement at end of input
